--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-Chess program with AI and remote game support
+Chess program with AI implemented in .NET
+
+![alt tag](https://raw.githubusercontent.com/Ribtoks/Queem/master/QueemScreenshot.png)
+
+For the AI is used advanced version of Alpha-Beta pruning with dozen of modern heuristics. Chess is implemented on top of bitboards.
